2003-05-22  Matti Aarnio  <mea@zmailer.org>

	* configure.in, transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Had a deeper look into "NAGLE" code, and realized that
	    we didn't  #include  <netinet/tcp.h>,  which carries the
	    necessary socket-option tokens,  thus no "NAGLE" control
	    was ever done.

	* sfio/bin/iffe, sfio/src/lib/sfio/Stdio_b/features/stdio,
	  sfio/src/lib/sfio/features/common, sfio/src/lib/sfio/features/sfio:
	    Picked the 'iffe' script from SFIO-2002, as well as
	    'features/sfio', and 'features/common', the 'features/stdio'
	    did need a bit of manual fixing, as there is no equivalent in
	    newer version.  (SFIO-2002 usage is -- seriously in doubt
	    due to its overflowing of thread stuff.)

2003-05-21  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtprouter.c:
	    When encountering "*INTERNAL*ERROR*" do report with '400'
	    status, instead of '500' status...

	* proto/db/smtp-policy.src:
	    In boilerplate texts, say "Your address is not liked .."
	    instead of "Your domain is not liked ..".

	* transports/smtp/smtp.c:
	    The SMTP "NOOP" shall timeout in 30 seconds..
	    Otherwise it lingers around with DOT-timeout (20 minutes)..
	    Also report this process state in proctitle data.

	* transports/smtp/smtp.c:
	    In EZMLM mode the SMTP TA didn't unlock all recipients,
	    which did cause considerable amount of  "#resync" activity
	    in between the scheduler, and SMTP TA.
	    Replaced a ton of 'return's with 'goto more_recipients;'
	    in order to coherently handle the EZMLM mode in all of
	    its forms.  Also unbroke the rp-chain (which is broken in
	    EZMLM detection)

	* sfio/src/lib/sfio/sfsetbuf.c, sfio/src/lib/sfio/sftable.c,
	  sfio/src/lib/sfio/sfvprintf.c, sfio/src/lib/sfio/Sfio_dc/sfdcdio.c:
	    Small fixes to silence the compilation warnings.

	* scheduler/scheduler.c, scheduler/update.c:
	    Moved  global_wrkcnt,  and  MIBMtaEntry->mtaStoredMessages